--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,5 +1,39 @@
+app:
+  hostname: localhost
+  server-port: 8761
+  application-name: discovery-server
+
 spring:
+  application:
+    name: ${app.application-name}
   profiles:
     active:
-      - base
       - local
+
+server:
+  port: ${app.server-port}
+
+eureka:
+  client:
+    registerWithEureka: false
+    fetchRegistry: false
+    serviceUrl:
+      defaultZone: http://${app.hostname}:${app.server-port}/eureka
+  instance:
+    hostname: ${app.hostname}}
+
+management:
+  health:
+    circuitbreakers:
+      enabled: true
+  endpoints:
+    web:
+      exposure:
+        include: "*"
+  endpoint:
+    health:
+      show-details: always
+
+logging:
+  level:
+    root: INFO
